--- a/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourseListModal/GeneralCourseListModal.module.scss
+++ b/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourseListModal/GeneralCourseListModal.module.scss
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 21;
 }
 
 .container {
